# CmakeIsWeird

./: CMakeLists.txt  main.cpp
